# printfactory

./: CHANGELOG.md  NOTES.md  README.md  pyproject.toml  pytest.ini  setup.py
doc/: printfactory.drawio
examples/: print_file.py
print_factory/: printer.py
printfactory/: __init__.py  print_tool.py  printer.py
printfactory/models/: print_tools.py
printfactory/print_tools/: __init__.py  adobe.py  adobe_reader.py
tests/: test_printer.py
tests/data/: create_sample_pdf.py
tests/integration/: test_printer.py
tests/unit/: conftest.py  test_print_file.py  test_print_tool.py  test_printer.py
tests/unit/models/: test_print_tools.py
tests/unit/models/print_tools/: test_adobe.py  test_adobe_acrobat.py  test_adobe_reader.py
tests/unit/print_tools/: test_adobe.py  test_adobe_acrobat.py  test_adobe_reader.py
