[tool.poetry]
name = "printfactory"
version = "0.1.0"
description = "Print PDF files to a local installed printer"
authors = ["dl6nm <mail@dl6nm.de>"]
homepage = "https://github.com/dl6nm/printfactory"
readme = "README.md"

[tool.poetry.scripts]
printfactory = "printfactory"

[tool.poetry.dependencies]
python = "^3.8.5"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
